adds slider layout

--- a/public/login.html
+++ b/public/login.html
@@ -34,7 +34,9 @@
 
       <section class="login-body">
         <div class="login-body__container">
-          <p class="login-body__slogan">Start your personal photo experience</p>
+          <p class="login-body__slogan">
+            Start your personal photo experience
+          </p>
           <h1 class="login-body__header">Login your account</h1>
           <form action="">
             <div class="input-group">
@@ -100,6 +102,25 @@
           </li>
         </ul>
       </footer>
+    </section>
+    <section class="slider">
+      <div class="slider__row">
+        <div class="owner">
+          <img src="assets/img/avatar.png" alt="" />
+          <div class="owner__details">
+            <p class="owner__name">Harry Holder</p>
+            <p class="owner__profile">@harryholder</p>
+          </div>
+        </div>
+        <div class="slider__nav">
+          <ul class="slider__list">
+            <li class="slider__item"></li>
+            <li class="slider__item"></li>
+            <li class="slider__item slider__item--active"></li>
+            <li class="slider__item"></li>
+          </ul>
+        </div>
+      </div>
     </section>
   </body>
 </html>
